fixes title alignment admin/manage clients

--- a/client/src/components/Admin/AdminUsers.scss
+++ b/client/src/components/Admin/AdminUsers.scss
@@ -10,7 +10,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        margin-top: 0;
 
         h3 {
             color: $secondary-text-color;
